pamc/src/tests/sample_code/should_fail/scope/duplicate_fun_params.ph
type Foo {
    .F: Foo,
}

let f = fun g(U: Type, U: Type): Foo { Foo.F };
 